--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ a {
     text-decoration: none;
     color: #919;
 }
+a:visited {
+    text-decoration: none;
+    color: #911;
+}
 a:hover {
     text-decoration: underline;
 }
