--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,12 @@
 body {
+font-family: "Helvetica Neue", Helvetica, "Segoe UI", Arial, freesans, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 16px;
+    line-height: 1.6;
+      /*line-height: 140%;neater*/
+color: #222222;
     margin: 30px auto;
     width: 60%;
+    font-size: 1em;
 }
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
@@ -14,24 +20,27 @@ nav ul li, footer ul li {
 }
 a {
     text-decoration: none;
-    color: #919;
+    color: rgb(0, 0, 238);
 }
 a:visited {
     text-decoration: none;
-    color: #911;
+    color: #901;
 }
 a:hover {
     text-decoration: underline;
 }
 h1 {
-    font-size: 3em;
+    font-size: 2.5em;
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
 }
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
+
+p.pub { 
+ padding-left: 2em;
+  text-align: justify;
+  text-align: left;  /*not justified*/
 }
+
+
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
@@ -44,4 +53,9 @@ ul.posts {
 
 ul.posts li {
     list-style: none;
+}
+
+h3 {
+ font-variant: small-caps;
+  padding-top: 1em;  /*separate from earlier paragraph*/
 }
